add gender and age_range to User model

--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -26,6 +26,12 @@
             = f.label :bio
             = f.text_area :bio, class: 'form-control', placeholder: 'Enter your bio', rows: 7, maxlength: 500
             %p.help-block Bio is limited to 500 characters.
+          %p
+            = f.label :age_range, 'How old are you?'
+            = f.select :age_range, age_ranges_for_select, { include_blank: '' }
+          %p
+            = f.label :gender, 'What are your pronouns?'
+            = f.select :gender, ['he/him/his', 'she/her/hers', 'they/them/theirs', 'Decline to say' ], { include_blank: '' }
 
     %fieldset.col-md-6
       .widget
