--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -31,7 +31,12 @@
             = f.select :age_range, age_ranges_for_select, { include_blank: '' }
           %p
             = f.label :gender, 'What are your pronouns?'
-            = f.select :gender, ['he/him/his', 'she/her/hers', 'they/them/theirs', 'Decline to say' ], { include_blank: '' }
+            = f.select :gender, gender_pronouns_for_select, { include_blank: '' }
+          %p
+            = f.collection_check_boxes :ethnicity_id, Ethnicity.all, :id, :label, include_hidden: false do |b|
+              = b.label do
+                = b.check_box 
+                = b.text
 
     %fieldset.col-md-6
       .widget
