--- a/app/views/proposals/_preview.html.haml
+++ b/app/views/proposals/_preview.html.haml
@@ -10,7 +10,7 @@
             %strong Format:
             %span #{proposal.session_format_name}
           .proposal-meta-item
-            %strong Track:
+            %strong Theme:
             %span #{proposal.track_name}
           -if proposal.tags.present?
             .proposal-meta-item
