--- a/app/views/proposals/show.html.haml
+++ b/app/views/proposals/show.html.haml
@@ -64,7 +64,7 @@
                 #{proposal.session_format_name}
             .col-sm-6
               .proposal-meta-item.text-left
-                .info-item-heading Track
+                .info-item-heading Theme
                 #{proposal.track_name}
 
   .row
