--- a/app/views/staff/proposal_reviews/index.html.haml
+++ b/app/views/staff/proposal_reviews/index.html.haml
@@ -55,7 +55,7 @@
           %th Ratings
           %th Title
           %th Session Format
-          %th Track
+          %th Theme
           %th Proposal<br/>Tags
           %th Reviewer<br/>Tags
           %th Comments
