--- a/app/views/staff/proposals/_other_proposals.html.haml
+++ b/app/views/staff/proposals/_other_proposals.html.haml
@@ -14,7 +14,7 @@
             %b Format:
             = proposal.session_format_name
         .other-proposal-track
-          %b Track:
+          %b Theme:
           = proposal.track_name
         .other-proposal-review-tags
           = proposal.review_tags_labels
