--- a/app/views/staff/proposals/selection.html.haml
+++ b/app/views/staff/proposals/selection.html.haml
@@ -51,7 +51,7 @@
           %th Score
           %th Speakers
           %th Talk Title
-          %th Track
+          %th Theme
           %th Session Format
           %th Reviewer Tags
           %th Status
