--- a/app/views/staff/proposals/show.html.haml
+++ b/app/views/staff/proposals/show.html.haml
@@ -60,7 +60,7 @@
             .col-sm-6
               .proposal-meta-item.full-width
                 #current-track
-                  .info-item-heading Track
+                  .info-item-heading Theme
                   #track-name.pull-left
                     #{proposal.track_name}
                   #edit-track-icon.fa.fa-pencil
