--- a/app/views/staff/speakers/index.html.haml
+++ b/app/views/staff/speakers/index.html.haml
@@ -37,7 +37,7 @@
           %th Name
           %th Email
           %th Session
-          %th Track
+          %th Theme
           %th Format
           - if current_user.organizer_for_event?(current_event)
             %th Actions
