--- a/app/views/staff/time_slots/_time_slots.html.haml
+++ b/app/views/staff/time_slots/_time_slots.html.haml
@@ -43,7 +43,7 @@
             %th Title
             %th Presenter
             %th Room
-            %th Track
+            %th Theme
             %th.actions Actions
         %tbody
           = render time_slots
