--- a/app/views/staff/tracks/_edit.html.haml
+++ b/app/views/staff/tracks/_edit.html.haml
@@ -1,6 +1,6 @@
 .modal-content
   .modal-header
-    %h3 Edit Track
+    %h3 Edit Theme
     .errors
   = simple_form_for [ event, :staff, @track ], remote: true do |f|
     .modal-body
