--- a/app/views/staff/tracks/_new.html.haml
+++ b/app/views/staff/tracks/_new.html.haml
@@ -1,6 +1,6 @@
 .modal-content
   .modal-header
-    %h3 New Track
+    %h3 New Theme
     .errors
   = simple_form_for [ event, :staff, @track ], remote: true do |f|
     .modal-body
