--- a/app/views/staff/tracks/_track.html.haml
+++ b/app/views/staff/tracks/_track.html.haml
@@ -22,5 +22,5 @@
         = link_to "Remove", event_staff_track_path(event, track),
           method: :delete,
           remote: true,
-          data: { confirm: "Are you sure you want to remove this track?" },
+          data: { confirm: "Are you sure you want to remove this theme?" },
           class: "btn btn-danger btn-xs"
