--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -47,7 +47,7 @@
 
                         .proposal-meta.proposal-description
                           .proposal-meta-item
-                            %strong Track:
+                            %strong Theme:
                             = invitation.proposal.track_name
                           .proposal-meta-item
                             %strong #{ 'Speaker'.pluralize(invitation.proposal.speakers.count) }:
@@ -79,7 +79,7 @@
                           %span #{proposal.session_format_name}
 
                         .proposal-meta-item
-                          %strong Track:
+                          %strong Theme:
                           %span #{proposal.track_name}
                       .proposal-meta.margin-top
                         %strong Updated:
