--- a/app/views/staff/proposal_reviews/show.html.haml
+++ b/app/views/staff/proposal_reviews/show.html.haml
@@ -66,7 +66,7 @@
             .col-sm-6
               .proposal-meta-item.full-width
                 #current-track
-                  .info-item-heading Track
+                  .info-item-heading Theme
                   #track-name.pull-left
                     #{proposal.track_name}
                   - if track_and_format_edit
