--- a/app/views/staff/proposals/index.html.haml
+++ b/app/views/staff/proposals/index.html.haml
@@ -66,7 +66,7 @@
           %th Standard Deviation
           %th Speakers
           %th Talk Title
-          %th Track
+          %th Theme
           %th Session Format
           - if event.public_tags?
             %th Proposal Tags
