--- a/app/views/staff/tracks/_form.html.haml
+++ b/app/views/staff/tracks/_form.html.haml
@@ -2,7 +2,7 @@
 = f.input :description, as: :text, input_html: {rows: 6}, placeholder: "Description",
   hint: "Brief description (fewer than 250 characters)"
 = f.input :guidelines, as: :text, input_html: {rows: 12}, placeholder: "Guidelines",
-  hint: "A more detailed description of the track that will appear in the Event Guidelines."
+  hint: "A more detailed description of the theme that will appear in the Event Guidelines."
 .modal-footer
 %button.pull-right.btn.btn-primary{:type => "submit"} Save
 %button.btn.btn-default{"data-dismiss" => "modal"} Cancel
