--- a/app/views/proposals/_preview.html.haml
+++ b/app/views/proposals/_preview.html.haml
@@ -11,7 +11,7 @@
             %span #{proposal.session_format_name}
           .proposal-meta-item
             %strong Theme:
-            %span #{proposal.track_name}
+            %span #{theme_with_suggestion(proposal)}
           -if proposal.tags.present?
             .proposal-meta-item
               %strong Tags:
