--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -80,7 +80,7 @@
 
                         .proposal-meta-item
                           %strong Theme:
-                          %span #{proposal.track_name}
+                          %span #{theme_with_suggestion(proposal)}
                       .proposal-meta.margin-top
                         %strong Updated:
                         %span #{proposal.updated_in_words}
