--- a/app/views/proposals/show.html.haml
+++ b/app/views/proposals/show.html.haml
@@ -65,7 +65,7 @@
             .col-sm-6
               .proposal-meta-item.text-left
                 .info-item-heading Theme
-                #{proposal.track_name}
+                #{theme_with_suggestion(proposal)}
 
   .row
     .col-md-8
