--- a/app/views/staff/proposal_reviews/index.html.haml
+++ b/app/views/staff/proposal_reviews/index.html.haml
@@ -76,7 +76,7 @@
             %td.session-format
               = proposal.session_format_name
             %td.track
-              = proposal.track_name
+              = theme_with_suggestion(proposal)
             %td.tags
               = proposal.tags_labels
             %td.review-tags
