--- a/app/views/staff/proposals/selection.html.haml
+++ b/app/views/staff/proposals/selection.html.haml
@@ -62,7 +62,7 @@
             %td= proposal.average_rating
             %td= proposal.speaker_names
             %td= proposal.title_link
-            %td= proposal.track_name
+            %td= theme_with_suggestion(proposal)
             %td= proposal.session_format_name
             %td= proposal.review_tags_labels
             %td
