--- a/app/views/staff/proposals/_other_proposals.html.haml
+++ b/app/views/staff/proposals/_other_proposals.html.haml
@@ -15,7 +15,7 @@
             = proposal.session_format_name
         .other-proposal-track
           %b Theme:
-          = proposal.track_name
+          = theme_with_suggestion(proposal)
         .other-proposal-review-tags
           = proposal.review_tags_labels
   -else
