--- a/app/views/staff/proposals/_proposal.html.haml
+++ b/app/views/staff/proposals/_proposal.html.haml
@@ -5,7 +5,7 @@
     %td= proposal.standard_deviation
     %td= proposal.speaker_names
     %td= proposal.title_link
-    %td= proposal.track_name
+    %td= theme_with_suggestion(proposal)
     %td= proposal.session_format_name
     - if event.public_tags?
       %td= proposal.tags_labels
