--- a/app/views/staff/proposals/show.html.haml
+++ b/app/views/staff/proposals/show.html.haml
@@ -62,7 +62,7 @@
                 #current-track
                   .info-item-heading Theme
                   #track-name.pull-left
-                    #{proposal.track_name}
+                    #{theme_with_suggestion(proposal)}
                   #edit-track-icon.fa.fa-pencil
                 #edit-track-wrapper
                   %span
