--- a/app/views/staff/time_slots/_form.html.haml
+++ b/app/views/staff/time_slots/_form.html.haml
@@ -20,7 +20,7 @@
     %strong Presenter:
     %p.speaker= time_slot.session_presenter
   .session-meta-item
-    %strong Abstract:
+    %strong Talk Outline:
     %p.abstract= time_slot.session_description
   .session-meta-item
     %strong Suggested duration:
