Rename the 'details' field to 'problem'

--- a/app/views/proposals/_contents.html.haml
+++ b/app/views/proposals/_contents.html.haml
@@ -6,7 +6,7 @@
 %h2.fieldset-legend For Review Committee
 
 .proposal-section
-  %h3.control-label Details
+  %h3.control-label Problem
   .markdown{ data: { 'field-id' => 'proposal_details' } }
     = proposal.details_markdown
 
