--- a/app/views/proposals/_contents.html.haml
+++ b/app/views/proposals/_contents.html.haml
@@ -11,7 +11,7 @@
     = proposal.details_markdown
 
 .proposal-section
-  %h3.control-label Pitch
+  %h3.control-label Fit
   .markdown{ data: { 'field-id' => 'proposal_pitch' } }
     =proposal.pitch_markdown
 
