--- a/app/views/staff/proposal_reviews/_reviewer_contents.html.haml
+++ b/app/views/staff/proposal_reviews/_reviewer_contents.html.haml
@@ -11,7 +11,7 @@
     = markdown(proposal.details)
 
 .proposal-section
-  %h3.control-label Pitch
+  %h3.control-label Fit
   .markdown{ data: { 'field-id' => 'proposal_pitch' } }
     = markdown(proposal.pitch)
 
