--- a/app/views/proposals/_form.html.haml
+++ b/app/views/proposals/_form.html.haml
@@ -47,6 +47,21 @@
   = f.input :pitch, input_html: { class: 'watched', rows: 5 }, label: 'Fit',
     hint: 'Explain why you’re the best person to give this talk. This is less about expertise (which is not a requirement), but more about the relationship between the talk and the speaker, and finding a good fit. Feel free to include your passion, past experience, previous roles, etc.'#, popover_icon: { content: pitch_tooltip }
 
+  = f.input :research, input_html: { class: 'watched', rows: 5 }, required: true,
+    hint: "What resources and research do you plan to include in your talk, if any? (i.e., interviews, reports, primary sources, academic journals, etc.)"
+
+  = f.input :location_and_time_zone, required: true
+
+  = f.input :equipment_requirements, input_html: { class: 'watched', rows: 5 }, required: true,
+    hint: "Please let us know if you require any additional equipment (microphone, light, headphones) to ensure a clear and clean recording of your talk and your full participation in a live group panel over videoconference."
+
+  = f.input :accessibility_requirements, input_html: { class: 'watched', rows: 5 }, required: true,
+    hint: "Is anything that you’d like us to know about your accessibility needs or priorities?"
+
+  = f.input :video_voice_recording_permission, required: true, label: 'Video and Voice Recording Permission',
+    as: :boolean, boolean_style: :inline, 
+    hint: "Each CodeLand 2021 talk will be submitted as a 15-minute pre-recorded video. We may also invite you to participate in a moderated live panel over video conference. Please check here to confirm that, if accepted, you are committing to sending us a pre-recorded 15-minute video of your talk and to possibly participating in a live panel over video conference."
+
 - if event.custom_fields.any?
   - event.custom_fields.each do |custom_field|
     .form-group
