Add delete comment function

--- a/app/assets/stylesheets/modules/_widgets.scss
+++ b/app/assets/stylesheets/modules/_widgets.scss
@@ -168,3 +168,12 @@
     background: lighten($brand-info, 45%);
   }
 }
+
+.deleted_comment {
+  background-color:lightblue;
+}
+
+.trash-wrapper{
+  font-size: 14px;
+  padding-left: 10px;
+}
