--- a/app/views/staff/proposal_reviews/_reviewer_contents.html.haml
+++ b/app/views/staff/proposal_reviews/_reviewer_contents.html.haml
@@ -15,10 +15,11 @@
   .markdown{ data: { 'field-id' => 'proposal_pitch' } }
     = markdown(proposal.pitch)
 
-.proposal-section
-  %h3.control-label Research
-  .markdown{ data: { 'field-id' => 'research' } }
-    = markdown(proposal.research) 
+/
+  .proposal-section
+    %h3.control-label Talk Type
+    .markdown{ data: { 'field-id' => 'talk_type' } }
+      = markdown(proposal.talk_type) 
 
 .proposal-section
   %h3.control-label Location and Time zone
