--- a/app/views/proposals/_form.html.haml
+++ b/app/views/proposals/_form.html.haml
@@ -47,9 +47,8 @@
   = f.input :pitch, input_html: { class: 'watched', rows: 5 }, label: 'Fit',
     hint: 'Explain why you’re the best person to give this talk. This is less about expertise (which is not a requirement), but more about the relationship between the talk and the speaker, and finding a good fit. Feel free to include your passion, past experience, previous roles, etc.'#, popover_icon: { content: pitch_tooltip }
 
-  /
-    = f.input :talk_type, required: true,
-      hint: "Please let us know which category you most see your proposed talk fitting in. Note: we don't favor one type of talk over others, but hope to have a good mix"
+  = f.input :talk_type, collection: Proposal::TALK_TYPES, required: true,
+    hint: "Please let us know which category you most see your proposed talk fitting in. Note: we don't favor one type of talk over others, but hope to have a good mix"
 
   = f.input :location_and_time_zone, required: true
 
